[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "seissolxdmf"
version = "0.1.4"
authors = [
    {name = "SeisSol Group"},
]
description = "A python reader for SeisSol xdmf output"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"
keywords = ["SeisSol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy", "h5py"
]
[project.urls]
Repository = "https://github.com/SeisSol/Visualization/seissolxdmf"
